finished code before cleaning

--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="styles.css">
+	<link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<h1>Mykola Kotok</h1>
+	<header>
+		<h1>Mykola Kotok</h1>
+	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>	
+			<li>
+				<section>
+					<a href='#' class='btn home-button'>
+						<span class="top content">Home</span>
+						<span class="bottom content">家屋</span>
+					</a>
+				</section>			
 			<li><a href="#">Portfolio</a></li>
 			<li><a href="#">Contact</a></li>
 			<li><a href="#">Links</a></li>
 		</ul>
 	</nav>
-	<img src="images/profile_photo_1.jpg" alt="Profile Photo">Mykola Kotok</img>
-	<aside>
+	<div class="image">
+		<span>Mykola Kotok</span>
+		<img src="images/photo.jpg" alt="Profile Photo">
+	</div>
+	<div class="side">
 		<ul>
 			<li>
 				<h3>Nick Name</h3>
@@ -29,14 +42,14 @@
 				<p>Japaniese, Chinese, Italian</p>
 			</li>
 		</ul>
-	</aside>
-	<main>
+	</div>
+	<div class="main">
 		<h2>My Background</h2>
-		<p>Education in Finance, experience in construction</p>
+		<p>Education in Finance, experience in construction. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce rhoncus est sed sapien vulputate, quis iaculis neque aliquet. Morbi commodo nibh vel risus mollis scelerisque. Proin ornare mi velit, ac sagittis diam porta id. Vestibulum ac efficitur metus, non tristique enim. Nunc sed turpis quam.</p>
 		<h2>My Dream</h2>
-		<p>Just got what I've dreamed about. Nothing for now</p>
+		<p>Just got what I've dreamed about. I want to know how to code. Nunc interdum arcu malesuada consectetur ultricies. Nullam ac tortor orci. Pellentesque tristique odio eros, sit amet consequat mauris cursus eget. Vestibulum sit amet leo suscipit, tempus odio sed, vestibulum felis. Aenean nunc ex, lobortis ut mollis et, interdum eget dui. Curabitur egestas dapibus tincidunt. Donec congue, quam quis pharetra auctor, mauris odio hendrerit massa, sed imperdiet nulla mauris tempor enim. Ut at placerat nisi. Donec auctor orci in neque rhoncus, pretium pretium nisi aliquet. Vestibulum finibus a lorem in viverra. Fusce scelerisque tempor metus ac luctus. Praesent ut eleifend nunc. Mauris auctor gravida ullamcorper.</p>
 		<h2>This Year's Goal</h2>
-		<p>Change my carrier</p>
-	</main>
+		<p>Change my carrier. Suspendisse pharetra nisl tristique massa sollicitudin fermentum. Aenean in sem ut velit consequat volutpat. Duis pellentesque arcu neque, eget cursus ante posuere interdum. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+	</div>
 </body>
 </html>
